Bump version to 3.0.1; suppress error notifications in development environment and configure cache provider